# MusePiPro_Driving_Detecte

./: .gitignore  FATIGUE_TEST_README.md  LICENSE  NETWORK_REPORTING_README.md  README-EN.md  README.md  README_en.md  三端部署说明.md
PCB/: ProPrj_光耦隔离输入.epro  ProPrj_光耦隔离输入_2025-12-12.epro  README.md
muse-adminpanel/: .env  README.md  build-production.js  env.production  package-lock.json  package.json  vite.config.js
muse-adminpanelv2/: .eslintrc.cjs  .prettierrc  README.md  index.html  init.sql  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js  数据展示端API接口.md
muse-backend/: init.sql  login.json  nginx-websocket-config.conf  pom.xml
muse-backendv2/: README.md  pom.xml
muse-frontend/: .env  API_CONFIG.md  README.md  index.html  package-lock.json  package.json  vite.config-improved.js
muse-hardware/: DATA_MAPPING_ANALYSIS.md  DATA_STRUCTURE_SPECIFICATION.md  HARDWARE_DATA_API_SPECIFICATION-确定稿.md  QuectelEC800M_final.py  README.md  behavior_analyzer.py  config.py  debug_config.py  diagnose_i2c.py  start.py  (+13 more)
plc_cpp/plc_cpp/plc_cpp/: CMakeLists.txt  QUICK_BUILD_FIXED.sh  README.md  build.bat  build.sh  gpiotest  gpiotest.cpp  k1-x_MUSE-Pi-Pro-new.dtb  k1-x_MUSE-Pi-Pro.dts  python_interface.py  run.sh  setup_config.sh  status.sh  stop.sh  stop_plc.sh  使用教程.md  取消开机自动启动.txt
plc_cpp/plc_cpp/plc_cpp/config/: plc_config.json  yolo_config.json
plc_cpp/plc_cpp/plc_cpp/include/: gpio_driver.h  plc_runtime.h  timer_counter.h  watchdog.h
plc_cpp/plc_cpp/plc_cpp/src/: gpio_driver.cpp  json_parser.cpp  ladder_engine.cpp  plc_interface.cpp
(+292 files in other folders)
